--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -175,7 +175,8 @@
                         android:layout_height="wrap_content"
                         style="@style/ListIcon"
                         android:text="@string/icon_star"
-                         />
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
